--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
     "name": "eslint-plugin-absolute-imports",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "main": "index.js",
-    "dependencies": {
-        "lodash": "^4.17.21"
+    "dependencies": {},
+    "description": "Eslint rule enforcing absolute imports",
+    "license": "MIT",
+    "author": {
+        "email": "hello@jeff.yt",
+        "name": "Jeff Chen",
+        "url": "https://www.jeffchen.dev"
     },
-    "description": "Eslint rule to enforce absolute imports",
-    "license": "MIT"
+    "categories": ["Linters"],
+    "repository": {
+        "url": "https://www.github.com/jchen1/eslint-plugin-absolute-imports"
+    },
+    "keywords": ["eslint", "imports", "eslint-plugin"]
 }
