--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-    "name": "eslint-plugin-absolute-imports",
-    "version": "0.0.2",
-    "main": "index.js",
-    "dependencies": {},
-    "description": "Eslint rule enforcing absolute imports",
-    "license": "MIT",
-    "author": {
-        "email": "hello@jeff.yt",
-        "name": "Jeff Chen",
-        "url": "https://www.jeffchen.dev"
-    },
-    "categories": ["Linters"],
-    "repository": {
-        "url": "https://www.github.com/jchen1/eslint-plugin-absolute-imports"
-    },
-    "keywords": ["eslint", "imports", "eslint-plugin"]
+  "name": "eslint-plugin-absolute-imports",
+  "version": "0.0.3",
+  "main": "index.js",
+  "dependencies": {},
+  "description": "Eslint rule enforcing absolute imports",
+  "license": "MIT",
+  "author": {
+    "email": "hello@jeff.yt",
+    "name": "Jeff Chen",
+    "url": "https://www.jeffchen.dev"
+  },
+  "categories": [
+    "Linters"
+  ],
+  "repository": {
+    "url": "https://www.github.com/jchen1/eslint-plugin-absolute-imports"
+  },
+  "keywords": [
+    "eslint",
+    "imports",
+    "eslint-plugin"
+  ]
 }
